<resources>
    <string name="app_name">WalgWalg-front_android</string>

    <!--    splash-->
    <string name="title">WalgWalg</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="autoLogin">자동 로그인</string>

    <!--    main-->
    <string name="Home_nickname">닉네임</string>
    <string name="Home_recordingStart">START</string>
    <string name="Home_calendar">7월 6일의 기록</string>
    <string name="Home_StepCount">걸음수</string>
    <string name="Home_km">Km</string>
    <string name="Home_Kcal">Kcal</string>
    <string name="initial">0</string>
    <string name="Home_startTime">12:30</string>

    <!--    weather-->
    <string name="wt_day">Today</string>
    <string name="wt_weak">Weak</string>
    <string name="ex_date">2022-06-24</string>
    <string name="ex_region">용인시</string>
    <string name="ex_time">03pm</string>
    <string name="ex_temp">29°</string>
    <string name="ex_day">Mom.</string>

    <!--    하단 탭-->
    <string name="tab_home">홈</string>
    <string name="tab_map">지도</string>
    <string name="tab_recommend">게시판</string>
    <string name="tab_myPage">마이페이지</string>

    <string name="mypage">마이페이지</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name = "PostMenu">
        <item>"삭제"</item>
        <item>"수정"</item>
    </string-array>
</resources>