<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#EBEBEB"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginVertical="10dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/img_clock"
            android:src="@drawable/icon_clock"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/txt_startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Home_startTime"
            android:textSize="18dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_marginRight="70dp">

            <TextView
                android:id="@+id/txt_recordStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/initial"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Home_StepCount"
                android:textColor="#727272"
                android:textSize="15dp"
                android:textStyle="normal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_marginRight="70dp">

            <TextView
                android:id="@+id/txt_recordDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/initial"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Home_km"
                android:textColor="#727272"
                android:textSize="15dp"
                android:textStyle="normal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">

            <TextView
                android:id="@+id/txt_recordCalorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/initial"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Home_Kcal"
                android:textColor="#727272"
                android:textSize="15dp"
                android:textStyle="normal"/>

        </LinearLayout>


    </LinearLayout>



</LinearLayout>